[package]
name = "spargebra"
version = "0.2.8"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["SPARQL"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/lib/spargebra"
homepage = "https://oxigraph.org/"
documentation = "https://docs.rs/spargebra"
description = """
A SPARQL parser
"""
edition = "2021"
rust-version = "1.60"

[features]
default = []
rdf-star = ["oxrdf/rdf-star"]
sep-0002 = []
sep-0006 = []

[dependencies]
peg = "0.8"
rand = "0.8"
oxiri = "0.2"
oxilangtag = "0.1"
oxrdf = { version = "0.1.7" }
chrono = "0.4.31"
datetimeparse = { version = "0.3.0", features = ["chrono"] }
fundu = { version="2.0.0", features = ["custom", "chrono"] }

[package.metadata.docs.rs]
all-features = true
